--- a/SharpBCI.Plugins/SharpBCI.Speller.Plugin/SharpBCI.Speller.Plugin.csproj
+++ b/SharpBCI.Plugins/SharpBCI.Speller.Plugin/SharpBCI.Speller.Plugin.csproj
@@ -94,6 +94,7 @@
     <Compile Include="EyeTracking\EyeTrackingSpellerWindow.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="IdentificationResult.cs" />
     <Compile Include="SpellerActivationMode.cs" />
     <Compile Include="KeyboardLayout.cs" />
     <Compile Include="SpellerController.cs" />
@@ -104,8 +105,8 @@
     <Compile Include="SpellerUtils.cs" />
     <Compile Include="MidasTouch\MidasTouchParadigm.cs" />
     <Compile Include="MidasTouch\MidasTouchStageProvider.cs" />
-    <Compile Include="SSVEP\HybridSsvepClassifier.cs" />
-    <Compile Include="SSVEP\SsvepClassifier.cs" />
+    <Compile Include="SSVEP\HybridSsvepIdentifier.cs" />
+    <Compile Include="SSVEP\SsvepIdentifier.cs" />
     <Compile Include="SSVEP\SsvepSpellerStageProviders.cs" />
     <Compile Include="P300\P300SpellerWindow.cs">
       <SubType>Form</SubType>
@@ -114,7 +115,7 @@
     <Compile Include="SSVEP\SsvepSpellerWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SpellerExperimentBaseWindow.cs" />
+    <Compile Include="AbstractSpellerWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpellerParadigm.cs" />
     <Compile Include="SpellerUtilityWindow.xaml.cs">
